--- a/views/about.jade
+++ b/views/about.jade
@@ -3,20 +3,12 @@ extends layout
 block mainContent
   #topleftdiv
   #about
-    | <span class=orbitron> RADIOCASE </span> -  a database for radiological cases
-    br
-    br
-    ul 
-      li Do you have that creeping feeling that your collected cases will disappear in the next PACS upgrade?
-      li Would you like to be able to access your cases from anywhere/anything with an internet connection (including your nice, shiny iPad)?
-      li Do you like sharing?
-    br
-    p
-      | - Just use <span class=orbitron> RADIOCASE </span>
-    hr
+    | <span class=orbitron> RADIOCASE </span> -  a database for radiological cases 
+    br 
     br
     h5
       | Cheat-sheet
+    br
     table#cheatsheet
       tr
         td
@@ -79,8 +71,7 @@ block mainContent
     br
     ul
       li To filter and only show your favorites type #fav into the box at the case list. 
-      li Type your username into the box to filter and only show your cases.
-      li Type #se for Swedish cases, #es for Spanish and #gb for English.
+      li Type your username into the box to filter and only show your own cases.
     br
     br
     | Please see 
