--- a/views/cases.jade
+++ b/views/cases.jade
@@ -12,11 +12,12 @@ block mainContent
             th.sortable Area
             th.sortable.title Title
             th.sortable.diagnosis.invisible Diagnosis
+            th#toggleDiagnosis(title="Show/hide dx") >
             th.invisible Creator
             th            
             th
             th
-            th#toggleDiagnosis(title="Show/hide dx") >
+            th
         tbody
           - each c in cases
             - if (c.hidden == 'false' || c.creator == user || user == 'radioca1se' )
@@ -32,11 +33,12 @@ block mainContent
                       - each icd in c.icds
                         | #{icd.code}
                         br
+                  td
                   td.invisible
                     //a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
                     @#{c.creator}
-                  td.eye(style='width:24px')
-                    - if (c.creator == user || user == 'radioca1se') 
+                  - if (c.creator == user || user == 'radioca1se') 
+                    td.eye('width:24px')
                       - if (c.hidden=='true')
                         img.showcase(ID='#{c.cid}', src='/static/ico/eye-prohibition.png')
                       - else
