--- a/views/disclaimer.jade
+++ b/views/disclaimer.jade
@@ -9,4 +9,5 @@ block mainContent
       | Remember to <b>ANONYMIZE ALL PATIENT RELATED INFORMATION</b>. If you for some reason don't want to share a specific case with other users you have the option of hiding it from them on the caselist, but the default is set so that everything you add is shared.  
     p
      | Finally, this is a hobby of mine, I built the site because it's something I hope can be useful during my radiology residency. It is free to use, and I intend to keep it so.
-    
+  script(type='text/javascript')
+    $('#sl').html("<a class='orange ArchivoBlack' href='/stat/about'>&laquo ABOUT</a>");
