--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block mainContent
   #indexpage
     br
-    .big_logo.orbitron RADIOCA.SE
+    .big_logo.clutchee RADIOCA.SE
     br
     br
     img(src='/static/img/OldRadio_3_320_2.svg', style='width: 320px')
@@ -12,7 +12,7 @@ block mainContent
     br
     br
     a(href='/cases/0/-1') 
-      h4.orbitron List cases
+      h4.clutchee List cases
   script(type='text/javascript')
     $(function(){
       // Hides small logo
