--- a/views/colophon.jade
+++ b/views/colophon.jade
@@ -9,12 +9,14 @@ block mainContent
     p
       | Icons by <a href="http://p.yusukekamiyamane.com">Yusuke Kamiyamane</a>. All rights reserved. Licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>.    
 
+    p
+      | Fonts "Asap" and "Archivo Black" by <a href="http://www.omnibus-type.com">Omnibus-Type</a>, de Argentina, yay!
 
     p
       | Grab the source from <a href=https://github.com/lijf/RADIOCA.SE>Github</a>, it is available under the <a href=http://www.opensource.org/licenses/mit-license.php>MIT license</a>
 
     pre
-      code Copyright (c) 2011 Johannes Finnsson
+      code Copyright &copy 2011-2013 Johannes Finnsson
     br
     pre
       code Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
@@ -24,4 +26,5 @@ block mainContent
     br
     pre
       code THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-
+  script(type='text/javascript')
+    $('#sl').html("<a class='orange ArchivoBlack' href='/stat/about'>&laquo ABOUT</a>");
