--- a/views/newindex.jade
+++ b/views/newindex.jade
@@ -2,22 +2,27 @@ extends layout
 
 block mainContent
   #indexhorizon
-    .big_logo.orbitron RADIOCASE
+    .big_logo.orange RADIOCASE
     - each r in radios
       #frontradio
-        .radio(id='frontpageRadio') 
-          .stack(tabindex='-1')
-            - if (r.images)
-              - each i in r.images
-                img.stack_image(src='#{i}')
-          a#list_cases(href='/cases/0/-1') 
-            h4.orbitron List cases
-  script(type='text/javascript')
+        a(href='/cases/0/-1')
+          .radio(id='frontpageRadio') 
+            .stack(tabindex='-1')
+              - if (r.images)
+                - each i in r.images
+                  img.stack_image(src='#{i}')
+            #list_cases 
+              h4.orange 
+                | CASES &raquo 
+      a#about(href='/stat/about')
+        h4.orange 
+          | ABOUT &raquo 
+  script.
     $(document).ready(function(){
       $('#sl').hide();
       //$('#footer').hide();
       $('.sign_in_with_twitter').hide();
-      visimg = $('#frontradio > .radio > .stack > .stack_image:visible:first');
+      visimg = $('#frontradio > a > .radio > .stack > .stack_image:visible:first');
       $(window).load(function(){
         return setInterval(function(){
         if (visimg.next().length){
